<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <Button
        android:id="@+id/ButtonSetup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Setup" />

    <Button
        android:id="@+id/ButtonConsole"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonSetup"
        android:text="@string/Console" />

    <Button
        android:id="@+id/ButtonLoopback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonConsole"
        android:text="@string/Loopback" />

    <Button
        android:id="@+id/ButtonAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonLoopback"
        android:text="@string/About" />

    <Button
        android:id="@+id/ButtonQuit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ButtonAbout"
        android:text="@string/Quit" />

</RelativeLayout>